<resources>
    <string name="app_name">图书管理系统</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">图书管理系统</string>
    <string name="nav_header_subtitle">Library Management System</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">设置</string>
    
    <!-- Menu items -->
    <string name="menu_home">首页</string>
    <string name="menu_books">图书管理</string>
    <string name="menu_borrows">借阅管理</string>
    <string name="menu_categories">分类管理</string>
    <string name="menu_statistics">统计报表</string>
    <string name="menu_settings">设置</string>
    <string name="menu_settings_title">设置</string>
    
    <!-- Actions -->
    <string name="action_search">搜索</string>
    <string name="action_add">添加</string>
    <string name="action_edit">编辑</string>
    <string name="action_delete">删除</string>
    <string name="action_borrow">借阅</string>
    <string name="action_return">归还</string>
    
    <!-- Common -->
    <string name="loading">加载中...</string>
    <string name="error_network">网络连接失败</string>
    <string name="error_server">服务器错误</string>
    <string name="retry">重试</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="search">搜索</string>
    <string name="no_data">暂无数据</string>
    
    <!-- Book related -->
    <string name="book_title">书名</string>
    <string name="book_author">作者</string>
    <string name="book_isbn">ISBN</string>
    <string name="book_category">分类</string>
    <string name="book_status">状态</string>
    <string name="book_location">位置</string>
    <string name="book_available">可借阅</string>
    <string name="book_borrowed">已借出</string>
    
    <!-- Borrow related -->
    <string name="borrower_name">借阅人</string>
    <string name="borrow_date">借阅日期</string>
    <string name="due_date">应还日期</string>
    <string name="return_date">归还日期</string>
    
    <!-- Settings -->
    <string name="server_url">服务器地址</string>
    <string name="server_url_hint">请输入服务器地址</string>
    <string name="test_connection">测试连接</string>
    <string name="connection_success">连接成功</string>
    <string name="connection_failed">连接失败</string>
    <string name="settings_saved">设置已保存</string>
    <string name="invalid_url">无效的URL地址</string>
    <string name="testing_connection">正在测试连接...</string>
    
    <!-- Book Detail -->
    <string name="return_book">归还</string>
</resources>