<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_books"
            android:icon="@drawable/ic_menu_book"
            android:title="@string/menu_books" />
        <item
            android:id="@+id/nav_borrows"
            android:icon="@drawable/ic_menu_borrow"
            android:title="@string/menu_borrows" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_menu_category"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_menu_statistics"
            android:title="@string/menu_statistics" />
    </group>

    <item android:title="@string/menu_settings_title">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_settings" />
        </menu>
    </item>
</menu>